build/log/idf_py_stderr_output_46375
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'handle_post':
/home/pi/wifiRelay_2/main/wifiRelay.c:521:5: error: implicit declaration of function 'save_credentials' [-Wimplicit-function-declaration]
  521 |     save_credentials(user, apipass, ssid, pass, auth_url, switch_url);
      |     ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
